# first-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  fastagent.config.yaml  main.py  pyproject.toml
.claude/agents/: pre-commit-fixer.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: pre-commit.yml
court-cal-agent/: README.md  after.csv  cal.py  config.toml  court_data.json  extract_commands.py  fetch_court_data.py  fetch_court_data.sh  gcalcli_wrapper.py  save_calendar_state.py
court-cal-agent/context/: court_data_2025-09-05_21-41-15.json  court_data_2025-09-05_23-18-21.json
court-cal-agent/migrations/: 001_create_audit_table.sql
court-cal-agent/scripts/: fetch_court_data.py  save_calendar_state.py
scripts/: devstart.sh  init.sh
workflow/: chaining.py  evaluator.py  human_input.py  orchestrator.py  parallel.py  router.py
workflow-fixed/: human_input.py  orchestrator.py  router.py
